# Elysium

./: Cargo.toml
.zed/: settings.json
elysium-core/: Cargo.toml
elysium-core/src/: lib.rs
elysium-desktop/: components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
elysium-desktop/src/: App.tsx  index.css  index.tsx
elysium-desktop/src-tauri/: Cargo.toml  tauri.conf.json
elysium-desktop/src-tauri/src/: main.rs
elysium-desktop/src/components/ui/: theme-toggle.tsx
