[workspace]
members = [
    "elysium-core",
    "elysium-desktop/src-tauri",
    # "elysium-cli",     # uncomment later
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Your Name <you@email.com>"]
repository = "https://github.com/yourusername/elysium"
homepage = "https://elysium.rs"
description = "Next-generation ebook library manager"

[workspace.dependencies]
# Core dependencies go here later
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
