[package]
name = "elysium-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
